# rlhf-foundations

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: block_grpo.yaml  dyck_grpo.yaml
rlhf2/llm/: experts.py  moe.py  rope.py  sinpos_absolute.py  transformer.py
rlhf2/rlhf/: abstract_rl.py  cispo.py  cispo_trainer.py  dpo.py  dpo_trainer.py  evaluate.py  grpo.py  grpo_trainer.py  gspo.py  gspo_trainer.py  icepop.py  icepop_trainer.py  inference.py  kl_utils.py  reward_modeling.py  rlhf_trainer.py  sft.py  sft_trainer.py  tis.py  tis_trainer.py
rlhf2/tasks/: abstract.py  block.py  dyck.py
rlhf2/utils/: data_types.py  visualize.py
scripts/: run_rl.py
tests/: conftest.py  test_block.py  test_config.py  test_dyck.py  test_kl_utils.py  test_models.py  test_moe.py  test_tokenizer.py
