[project]
name = "rlhf-foundations"
version = "0.1.0"
description = "Run and understand RLHF concepts on your local Macbook"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic",
    "torch",
    "omegaconf",
    "pyyaml",
    "dash",
    "plotly",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rlhf2"]
